--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -136,10 +136,10 @@ The Swedish vowel space is a relatively densely populated space with 21 categori
 \setcounter{page}{1}
 
 # Introduction {#sec:intro}
-The Swedish vowel inventory consists of 21 categories that differ in spectral (formant frequencies) and temporal cues (duration). It forms a typologically rather complex space, characterized by a systematic quantity distinction resulting in 9 long and short vowel pairs, 3 different levels of lip-rounding, and contextually conditioned allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/ in position before /r/ or retroflex segments. Given the crowdedness of the space and resulting category overlap for some vowels, previous work has reported on the importance of additional cues besides the two primary determinants to vowel identity cross-linguistically---the first two formants, F1 and F2 [e.g., @joos1948; @Ladefoged1957; @nearey-assmann1986; @peterson1961]---as well as the need to look beyond static point estimates of F1 and F2. For instance, the third formant (F3) for rounded vs. unrounded categories [@refs], formant dynamics for several neighboring categories in the front part of the space [@kuronen2000; @pelzer-boersma2019], and duration for certain vowel pairs [@refs]. 
+The Swedish vowel inventory consists of 21 categories that differ in spectral (formant frequencies) and temporal cues (duration). It forms a typologically rather complex space, characterized by a systematic quantity distinction resulting in 9 long and short vowel pairs, 3 different levels of lip-rounding, and contextually conditioned allophones to /`r linguisticsdown::cond_cmpl("ɛ")`/ and /`r linguisticsdown::cond_cmpl("ø")`/ in position before /r/ or retroflex segments. Given the crowdedness of the space and resulting category overlap for some vowels, previous work has reported on the importance of additional cues besides the two primary determinants to vowel identity cross-linguistically---the first two formants, F1 and F2 [e.g., @joos1948; @Ladefoged1957; @nearey-assmann1986; @peterson1961]---as well as the need to look beyond static point estimates of F1 and F2. For instance, the third formant (F3) for rounded vs. unrounded categories [e.g., @fant1959; @fant1969; @fujimura1967; @kuronen2000], formant dynamics for several neighboring categories in the front part of the space [@kuronen2000; @pelzer-boersma2019], and duration for certain vowel pairs [@behne-kirk1997]. 
 
 This paper investigates the acoustic characteristics of modern-day Swedish vowels in two studies that aim to contribute to our understanding of language-specific and langue-general patterns of vowel acoustics. The first study presents a comprehensive description of the primary acoustic cues to vowel identity, using a recently released database of *h-VOWEL-d* (short: hVd) words recorded by 44 male and female talkers of Swedish, the SwehVd database [@persson-jaeger2023]. The second study assesses whether the Swedish vowel space has been submitted to changes over the last generation, by comparing the acoustics of SwehVd against that of a reference material from 1999 [@eriksson2004]. The variety investigated is Central Swedish, the regional standard variety of Swedish spoken in an area around and beyond Stockholm (eastern Svealand), including Mälardalssvenska, Sveamål, Uppsvenska, Mellansvenska [e.g., @bruce2009; @elert1994; @riad2014].^[For the reader unfamiliar with Central Swedish, Section \@ref(sec:sweVowels) provides an overview of the acoustics of Central Swedish vowel space.] 
-Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000. The former is based on recordings obtained around 1999 of all vowels, of which four short vowels were omitted from analysis. It covers 98 rural locations in Sweden and Swedish-speaking parts of Finland, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space, such as the long vowels for studies on diphthongization [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, such as the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute with important insights into ongoing processes and shifts. However, given their focus on subsets of the space, acoustic mappings of the modern-day Central Swedish vowel space *in its entirety* are largely lacking. Given that there is some evidence that productions of minimal pairs can lead to enhanced contrasts, it remains an open question how representative such subsets are for the vowel space as a whole [e.g., @seyfarth2016 for non-vowels; @lancia-winter]. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers, number of repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous studies have either not held the phonetic context constant across vowels, or have investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
+Existing descriptions of the entire space of 21 vowels rest on recordings made more than 25 years ago [reported in, e.g., @engstrand1999; @kuronen2000; @leinonen2010; @riad2014]. Two of the most recent studies are @leinonen2010 and @kuronen2000. The former is based on recordings obtained around 1999 of all vowels, of which four short vowels were omitted from analysis. It covers 98 rural locations in Sweden and Swedish-speaking parts of Finland, including reference talkers of Standard Swedish. The latter covers the entire vowel space but is based on recordings from 1981 [@leinonen1982]. More recent work over the last two decades has focused on parts of the phonological space, such as the long vowels for studies on diphthongization [@pelzer-boersma2019], two vowels for merger studies [e.g., [`r linguisticsdown::cond_cmpl("ɵ")`] - [`r linguisticsdown::cond_cmpl("œ")`] in @wenner2010], or a single vowel, such as the damped [`r linguisticsdown::cond_cmpl("ɨː")`] [@schotz2011], see Table \@ref(tab:previous-work). These studies all provide detailed mappings of different parts of the space, and contribute with important insights into ongoing processes and shifts. However, given their focus on subsets of the space, acoustic mappings of the modern-day Central Swedish vowel space *in its entirety* are largely lacking. Given that there is some evidence that productions of minimal pairs can lead to enhanced contrasts [e.g., @schertz2013; @seyfarth2016], it remains an open question how representative such subsets are for the vowel space as a whole. In addition, most previous studies differ in the materials used, in terms of the size of the database (e.g., number of talkers, number of repetitions per vowel), the demographics of talkers (e.g., male/female talkers, region of origin), and phonological contexts used for recording. For instance, the majority of previous studies have either not held the phonetic context constant across vowels, or have investigated isolated vowel production out of context or in different CVC contexts (Table \@ref(tab:previous-work)). This diversity restricts comparison across studies on Swedish, as well as cross-linguistically.
 
 \begin{landscape}
 
@@ -162,7 +162,7 @@ d.previous.work <- tibble(
                          "3-4 repetitions of all 21 vowels, different phonological contexts for each vowel",
                          "1 repetition of all 9 long vowels in isolation",
                          "5-7 repetitions of all 21 vowels, different phonological contexts for each vowel and each repetition",
-                         "a subset of 19 vowels from the SweDia database (see Bruce et al., 1999 above)",
+                         "a subset of 19 vowels from the SweDia database (see Eriksson, 2004 above)",
                          "5 repetitions of all 8 short vowels in bVb, dVd, gVg contexts, with four different stress patterns",
                          "10 repetitions of all 6 long rounded vowels in itV context",
                          "8 repetitions of all 9 long vowels, different phonological contexts for each vowel and each repetition",
@@ -173,7 +173,7 @@ d.previous.work <- tibble(
                    "12 talkers (6 female; 6 young) each from 107 locations across Sweden and Finland; 8 reference talkers of standard Central Swedish from the Greater Stockholm area (4 female)",
                    "24 male talkers, students at KTH in Stockholm",
                    "4 male talkers from Nyköping, 17-18 years of age (4 female reference talkers), recorded by Leinonen, Pitkänen & Vihanta, 1982",
-                   "see Bruce et al., 1999",
+                   "see Eriksson, 2004",
                    "1 male talker from Stockholm, 19 years of age",
                    "6 talkers of standard Swedish",
                    "8 talkers (4 female) from Stockholm",
@@ -217,7 +217,7 @@ kable(d.previous.work,
 
 The materials and methodological approach adopted in the current paper is motivated by the goal to complement previous work for a comprehensive picture of modern-day Central Swedish vowels. The first study provides an up-to-date acoustic description of the entire Central Swedish vowel space of 21 categories, using the SwehVd database [@persson-jaeger2023]. The use of an hVd database minimizes coarticulatory effects from the surrounding phonetic context, and increases cross-linguistic comparability [e.g., @hillenbrand1995; @Peterson1952]. The main spectral and temporal cues to vowel identity are reported in static analyses [following e.g., @engstrand1999; @fant1969], as well as dynamic analyses, given the well documented importance of formant dynamics on vowel production and perception [e.g., @assmann-katz2005; @eklund1997; @hillenbrand-nearey1999; @kuronen2000; @nearey-assmann1986]. In contrast with previous work investigating the dynamics of Central Swedish vowels, the present study includes analyses of both long and short vowels, thus submitting the entire vowel space to the same analyses. 
 
-The static analysis assesses what cues contribute to vowel distinctions and evaluates some of the claims brought forward in previous work, such as the hypothesized importance of F3 for rounded vs. unrounded high front vowel distinctions, and to what extent spectral and temporal cues contribute to vowel pair distinctions [@refs]. The dynamic analysis evaluates what dynamic information adds to the discriminability of Central Swedish vowels, and assesses what part of the space seem subdued? to diphthongization.
+The static analysis assesses what cues contribute to vowel distinctions and evaluates some of the claims brought forward in previous work, such as the hypothesized importance of F3 for rounded vs. unrounded high front vowel distinctions [@refs], and to what extent spectral and temporal cues contribute to vowel pair distinctions [e.g., @behne-kirk1997; @kuronen2000]. The dynamic analysis evaluates what dynamic information adds to the discriminability of Central Swedish vowels, and assesses what part of the space seem subdued? to diphthongization.
 
 Anticipating some of the main results from Study 1, the acoustic analyses suggested differences in the phonetic realization of some vowels compared to other qualitative descriptions of Central Swedish [e.g., @eklund1997; @engstrand1999; @fant1969; @kuronen2000; @riad2014]. These included the fronting of [`r linguisticsdown::cond_cmpl("eː")`], the lowering of [`r linguisticsdown::cond_cmpl("ɛː")`], and the centralization of [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("yː")`] [c.f., @leinonen2010; @pelzer-boersma2019; @schotz2011]. This led me to conduct Study 2, which aimed to assess the scope and spread of these changes over the last generation, by comparing the acoustic characteristics of SwehVd against vowel data from a database of 8 (female = 4) talkers of Central Swedish recorded in 1999 as part of the SweDia dialect project [@eriksson2004].
 
@@ -409,7 +409,7 @@ d.Swehvd.Swedia <- d.SweDia2000.forStudy.long %>%
 # Study 1: Static and dynamic analyses of the spectral and temporal properties of Central Swedish {#sec:swehVd-static}
 Study 1 describes the spectral acoustics of Central Swedish in static and dynamic analyses of F0, F1, F2, F3, and duration. While fundamental frequency (F0) is not considered an important cue to vowel identity in itself, it is known to vary between languages, dialects and speech styles [e.g., @henton2005; @jacewicz-fox2018; @johnson2005; @mennen2012; @weirich2019] and is therefore reported. Measurements of vowel duration are included to capture the systematic quantity distinction between long-short vowel pairs in Central Swedish. 
 
-Study 1 aims to provide a detailed description of the acoustics of Central Swedish vowels, and to evaluate the relative importance of certain cues for some vowel distinctions as hypothesized in previous work. These include the importance of lip-rounding (F3) for high vowel distinctions [@refs], to what extent long-short vowel pairs differ in quality (formants) and quantity (duration) [@refs], and what vowels seem to undergo diphthongization. The dynamic analysis furthermore serves to explore which cues carry information about vowel quality once dynamic information is considered.
+Study 1 aims to provide a detailed description of the acoustics of Central Swedish vowels, and to evaluate the relative importance of certain cues for some vowel distinctions as hypothesized in previous work. These include the importance of lip-rounding (F3) for high vowel distinctions [@fant1959; @fant1969; @fujimura1967; @kuronen2000], to what extent long-short vowel pairs differ in quality (formants) and quantity (duration) [e.g., @behne-kirk1997; @kuronen2000], and what vowels seem to undergo diphthongization. The dynamic analysis furthermore serves to explore which cues carry information about vowel quality once dynamic information is considered.
 
 The methodology employed for the static and dynamic analyses in Study 1 is next presented, beginning with a description of the materials used.
 
@@ -431,7 +431,7 @@ Previous work on Swedish has analyzed vowel data using primarily Bark-transforme
 
 (ref:swe-vowels) The SwehVd vowel data in unnormalized Hertz (*left*) and Nearey's uniform scaling space (*right*), along the first two formants, F1 and F2. Points show recordings of each of the 21 Central Swedish vowels by 44 (24 female) L1 talkers in the database, averaged across the three middle time-points (at 35, 50, 65% into the vowel). Vowel labels are placed at the vowel mean across talkers. Long vowels are boldfaced. Vowels that mismatched intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
 
-```{r swe-vowels, fig.width=base.width*5, fig.height=base.height*3.5, out.width='90%', fig.align='center', fig.pos="h", fig.cap="(ref:swe-vowels)"}
+```{r swe-vowels, fig.width=base.width*5, fig.height=base.height*3.5, out.width='90%', fig.align='center', fig.pos="ht", fig.cap="(ref:swe-vowels)"}
 p <- d.SwehVd.forStudy.long.static %>%
   ggplot(
     aes(
@@ -480,11 +480,11 @@ Category separability indices have been used in previous work as a means of... I
 To obtain a measure of the magnitude of effect, a linear mixed-effects model (LMM) was fit, comparing the separability indices obtained assuming different cue dimensions. The LMM thus predicted the separability index from category and cue dimension and their interaction, with talkers as random effect. The \texttt{lmer()} function from the \texttt{R} package \texttt{lme4} was used. Example of model code: $separability \sim category * cues + (1|Talker)$. Cue dimension was sum-coded (F1-F2 = 1, F1-F2-F3 = -1).
 
 #### Dynamic acoustic analysis
-The dynamic analysis is divided into two main sections that both use formant measurements at all five time-points to assess the importance of formant dynamics for vowel distinctions. In the first section, formant trajectory plots were used to assess the scope and direction of movements and to what extent vowels seem to diphthongize or merely display formant movements. The trajectory plots were also used to evaluate whether category overlap is reduced once trajectories are considered. This part of the analysis was also supplemented with category separability index for neighboring categories assessing whether indices that could account for information at each time-point would increase separability. And for each vowel within a vowel pair? <!--add here--> These analyses assessed previously reported results on diphthongization in the long vowels [@refs], and explored trajectories in the short vowels while evaluating the same hypotheses as in the static analysis.<!--change this--> 
+The dynamic analysis is divided into two main sections that both use formant measurements at all five time-points to assess the importance of formant dynamics for vowel distinctions. In the first section, formant trajectory plots were used to assess the scope and direction of movements and to what extent vowels seem to diphthongize or merely display formant movements. The trajectory plots were also used to evaluate whether category overlap is reduced once trajectories are considered. This part of the analysis was also supplemented with category separability index for neighboring categories assessing whether indices that could account for information at each time-point would increase separability. And for each vowel within a vowel pair? <!--add here--> These analyses assessed previously reported results on diphthongization in the long vowels [e.g., @pelzer-boersma2109; @kuronen2000], and explored trajectories in the short vowels while evaluating the same hypotheses as in the static analysis.<!--change this--> 
 
 In the second part of the dynamic analysis, the hypothesized contribution of formant dynamics to category information was modeled using generalized additive mixed-effects models (GAMMs) [@baayen2017]. GAMMs were employed to assess the relative contribution of each cue to category distinctions once formant dynamics was considered, while also accounting for by-talker variability. This type of model has not only a temporal structure (formant measurements at different time-points), but also a hierarchical structure, as individual measurements were grouped into formant contours that in turn were grouped by talkers and gender. Both the complex dependencies generated by this structure as well as the non-monotonic behavior of formants, cannot easily be captured by traditional parametric methods, such as linear regression [e.g., @soskuthy2021]. GAMMs can accommodate nonlinear relationships between predictors and response variables, and their use of smooth functions can provide more nuanced representations of these relationships. Much like other types of mixed models, GAMMs allow for the inclusion of random effects, which provides a parsimonious way to account for dependencies in grouped data. 
 
-GAMMs are increasingly used in phonetic research, due to their suitability in modelling complex phonetic patterns without having to rely on simplifying assumptions of linearity or that vowels can be reduced to a single F1-F2 point estimate [e.g., @soskuthy2021; @refs; @wieling2018]. They have been used in studies on vowels in different English varieties, e.g., on /u/-fronting in Derby English [@soskuthy2018], on the front vowel system of Southern American English [@renwick-stanley2020], but to the best of my knowledge, they have not yet been implemented in studies of Swedish vowels. The use of GAMMs thus complements previous work on Central Swedish that has primarily used visual inspection, formant measurements and linear regression (Table \@ref(tab:previous-work)).
+GAMMs are increasingly used in phonetic research, due to their suitability in modelling complex phonetic patterns without having to rely on simplifying assumptions of linearity or that vowels can be reduced to a single F1-F2 point estimate [e.g., @chuang2021; @soskuthy2021; @wieling2018]. They have been used in studies on vowels in different English varieties, e.g., on /u/-fronting in Derby English [@soskuthy2018], on the front vowel system of Southern American English [@renwick-stanley2020], but to the best of my knowledge, they have not yet been implemented in studies of Swedish vowels. The use of GAMMs thus complements previous work on Central Swedish that has primarily used visual inspection, formant measurements and linear regression (Table \@ref(tab:previous-work)).
 
 GAMMs were fit to all 21 categories, as well as to the long and short vowels separately, using the \texttt{bam()} function from the \texttt{R} package \texttt{mgcv}. Example of model code: $F1 \sim category + Gender + s(timepoint, by = category, k = 5) + s(Talker, bs = "re") + s(Talker, category, bs = "re")$. The first set of GAMMs were fit to the long and short vowels separately. Here, vowel was backwards difference coded with [`r linguisticsdown::cond_cmpl("iː")`] and [`r linguisticsdown::cond_cmpl("ɪ")`] as reference categories in each set, using the \texttt{contr.sdif()} function from the \texttt{R} package \texttt{MASS}. The second set was fit to all 21 categories, aiming for an evaluation of differences between categories within vowel pairs. Vowel was backwards difference coded with [`r linguisticsdown::cond_cmpl("iː")`] as reference vowel. The vowel variable was ordered alternating long and short vowels by the pair, in order for the short vowel to be compared against its preceding long counterpart. 
 
@@ -923,7 +923,7 @@ As expected, long-short vowel pairs differ systematically in duration (Figure \@
 
 (ref:duration-densities) Category densities for duration illustrates systematic differences in duration between the long and short vowel pairs.
 
-```{r duration-densities, fig.width= base.width * 4, fig.height = base.height * 2.5, fig.align='center', fig.pos='h', out.width='95%', fig.cap="(ref:duration-densities)"}
+```{r duration-densities, fig.width= base.width * 4, fig.height = base.height * 2.5, fig.align='center', fig.pos='ht', out.width='95%', fig.cap="(ref:duration-densities)"}
 # Generate dataframe with vowel pairs
 d.SwehVd.vowel_pairs <- d.SwehVd.forStudy.long.dynamic %>%
   select(-starts_with("formant")) %>%
@@ -1465,7 +1465,7 @@ itsadug::plot_smooth(m.F3.short, view = "timepoint", plot_all = "category", col 
 
 The effect of F1, F2, F3 and duration on all long and short vowel pairs was modeled in four separate GAMMs, with gender, vowel and their interaction as independent variables, and time-points as smoothing function. Random slopes and intercepts for talker were included. Summary tables of these four GAMMs are included in the SI (Section \@ref(sec:SI-GAMMs)). 
 
-The GAMMs suggested a treatment effect of vowel on all spectral and temporal cues for all vowel pairs (for F1, all $ps > .027$; for F2, F3 and duration, all $ps < .0001$). With the exception of the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] vowel pair (see also previous section), all rounded vowels displayed lower F3 values, hence more lip-rounding, in their long allophones [e.g., @hadding1976; @stalhammar1973]. The results thus seem to suggest that when formant dynamics is considered, *all* long-short Central Swedish vowel pairs differ in spectral and temporal cues, including pairs for which previous research have found primarily duration dependencies [e.g., @behne-kirk1997; @haddingkoch1964; @kuronen2000]. Some pairs did, however, display smaller differences in spectral cues than others. For instance, the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] pairs predicting F1, and the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] pairs predicting F3 (Figure \@ref(fig:m-paired)).
+The GAMMs suggested a treatment effect of vowel on all spectral and temporal cues for all vowel pairs (for F1, all $ps > .027$; for F2, F3 and duration, all $ps < .0001$). With the exception of the [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʏ")`] vowel pair (see also previous section), all rounded vowels displayed lower F3 values, hence more lip-rounding, in their long allophones [e.g., @hadding1976; @stalhammar1973]. The results thus seem to suggest that when formant dynamics is considered, *all* long-short Central Swedish vowel pairs differ in spectral and temporal cues, including pairs for which previous research have found primarily duration dependencies [e.g., @behne-kirk1997; @kuronen2000]. Some pairs did, however, display smaller differences in spectral cues than others. For instance, the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`], [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] pairs predicting F1, and the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] pairs predicting F3 (Figure \@ref(fig:m-paired)).
 
 (ref:m-paired) Fitted smooths of GAMM and 95% confidence intervals for the vowel pairs [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("uː")`] - [`r linguisticsdown::cond_cmpl("ʊ")`] predicting F1 (**left**), and for the vowel pairs [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("ɪ")`] and [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("ɔ")`] predicting F3 (**right**). 
 
@@ -1606,7 +1606,7 @@ For the current purpose of serving as a reference point for the SwehVd materials
 
 Given the smaller number of talkers in SweDia, the two databases were of unequal sample sizes overall: N = `r nrow(d.SwehVd %>% distinct(Talker, category, Token))` datapoints for SwehVd, and N = `r nrow(d.SweDia2000.forStudy %>% distinct(Talker, category, Token))` datapoints for SweDia. The regional origin of the talkers matched across databases, age at time of recording and the relative proportion of male and female talkers were also highly similar (50% female talkers in SweDia2000, 55% female talkers in SwehVd). Any potential effects of differences in gender distributions on the comparison were presumably reduced by the use of normalized vowel data.
 
-Cue measurements from SweDia were extracted in the same way as for SwehVd (Section \@ref(sec:cueMeasures)). To correct for measurement errors in the automatic extraction of cues, the joint multivariate distribution of the five extracted cues (F0, F1, F2, F3 and duration) was estimated for each distinct combination of talker and vowel. This was compared against 5 separate univariate distributions to assess whether the number of identified outliers was driven by one or a couple of the five cues. Points that fell outside of the $0.5th$ to the $99.5th$ quantile of the multivariate Gaussian distribution for each vowel were identified, examined for measurement errors, and subsequently corrected. This followed the approach employed for the SwehVd corpus [@refs], and strikes a middle-ground between the ideal (manual correction of all tokens) and feasibility.
+Cue measurements from SweDia were extracted in the same way as for SwehVd (Section \@ref(sec:cueMeasures)). To correct for measurement errors in the automatic extraction of cues, the joint multivariate distribution of the five extracted cues (F0, F1, F2, F3 and duration) was estimated for each distinct combination of talker and vowel. This was compared against 5 separate univariate distributions to assess whether the number of identified outliers was driven by one or a couple of the five cues. Points that fell outside of the $0.5th$ to the $99.5th$ quantile of the multivariate Gaussian distribution for each vowel were identified, examined for measurement errors, and subsequently corrected. This followed the approach employed for the SwehVd corpus [@persson-jaeger2023], and strikes a middle-ground between the ideal (manual correction of all tokens) and feasibility.
 
 ### Assessing vowel shifts
 In order to assess whether the relative placement of the categories in the acoustic space was different between datasets, formant data was visualized in F1-F2 space and distances assessed with the *orthogonal projection ratio*, henceforth $op$ [@stevens-schiel2019].^[Other distance measures are possible, such as Mahalanobi's distance. The primary advantages of using the $op$ is that it considers the overall structure of vowel spaces rather than individual distances, and that it offers a standardized way to compare the degree of category membership across different datasets.] Both visualizations and $op$ calculations were based on measurements at the steady-state portion of the vowel in both datasets---taking the average F1-F2 values across the three mid-points (at 35, 50, and 65% into the vowel). This approach presumably reduced the risk of coarticulatory effects resulting from the use of different phonological contexts between the two datasets.
@@ -2127,7 +2127,7 @@ The author declares that the research was conducted in the absence of any commer
 \newpage
 
 # Supplementary information for *Persson (2024). The acoustic characteristics of Central Swedish vowels* {-}
-Both the main text and these supplementary information (SI) are derived from the same R markdown document available via OSF at  [https://osf.io/](https://osf.io/)<!--enter html here-->.
+Both the main text and these supplementary information (SI) are derived from the same R markdown document available via OSF at  [https://osf.io/7uvj4/](https://osf.io/7uvj4/).
 
 ## Required software {#sec:SI-software}
 
@@ -2144,17 +2144,6 @@ The following R packages were used to create this document: `r cite_r("latex-stu
 ```
 
 ## Additional information on Study 1
-
-### Cue matrix plot in unnormalized Hertz {#sec:SI-raw}
-Figure \@ref(fig:SI-swe-vowels-all-cues-hz) displays the pairwise combinations of the five spectral and temporal cues---F0, F1, F2, F3 and duration---in raw Hertz. For F0, there are two overlapping but separated peaks, reflecting the overall difference in vocal tract size for the two groups of female and male talkers in the database.
-
-(ref:SI-swe-vowels-all-cues-hz) The SwehVd vowels in unnormalized Hertz space. Points show recordings of each of the 21 Central Swedish vowels by the talkers in the database in all five cue spaces, averaged across the three midpoints. Vowel labels indicate vowel means across talkers. Ellipses show bivariate Gaussian 95% confidence interval of vowel means. Note that, unlike in Figure \@ref(fig:swe-vowels), axis directions are not reversed. Vowels that mismatched the intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
-
-```{r SI-swe-vowels-all-cues-hz, fig.width=base.width*4+.5, fig.height=base.height*4+.5, out.width = '100%', fig.align='center', fig.cap="(ref:SI-swe-vowels-all-cues-hz)"}
-p.matrix.cues %+%
-  (d.SwehVd.forStudy.long.static %>%
-     filter(Normalization.Type == "no normalization (Hz)", F0 < 320))
-```
 
 ### Neutralization of short /e/ and /`r linguisticsdown::cond_cmpl("ɛ")`/ {#sec:SI-hedd-hädd}
 Figure \@ref(fig:SI-hedd) demonstrates that the short allophones of /`r linguisticsdown::cond_cmpl("e")`/ and /`r linguisticsdown::cond_cmpl("ɛ")`/ neutralize as [`r linguisticsdown::cond_cmpl("ɛ")`] in Central Swedish.
@@ -2348,6 +2337,17 @@ F3 & F & 3085.16 (SD=168.28) & 2798.4 (SD=160.74) & 2781.55 (SD=188.02) & 2760.2
 # itsadug::plot_smooth(m.F3.short, view = "timepoint", plot_all = "category")
 # itsadug::plot_smooth(m.F3.long, view = "timepoint", plot_all = "category")
 #itsadug::plot_diff(m.F3.long, view = "timepoint", comp = list(category = c("[yː]", "[iː]")))
+```
+
+### Cue matrix plot in unnormalized Hertz {#sec:SI-raw}
+Figure \@ref(fig:SI-swe-vowels-all-cues-hz) displays the pairwise combinations of the five spectral and temporal cues---F0, F1, F2, F3 and duration---in raw Hertz. For F0, there are two overlapping but separated peaks, reflecting the overall difference in vocal tract size for the two groups of female and male talkers in the database.
+
+(ref:SI-swe-vowels-all-cues-hz) The SwehVd vowels in unnormalized Hertz space. Points show recordings of each of the 21 Central Swedish vowels by the talkers in the database in all five cue spaces, averaged across the three midpoints. Vowel labels indicate vowel means across talkers. Ellipses show bivariate Gaussian 95% confidence interval of vowel means. Note that, unlike in Figure \@ref(fig:swe-vowels), axis directions are not reversed. Vowels that mismatched the intended label are excluded (`r signif((d.SwehVd %>% filter(Transcribed_vowel != "targeted") %>% nrow() / d.SwehVd %>% nrow()) * 100)`% of all recordings).
+
+```{r SI-swe-vowels-all-cues-hz, fig.width=base.width*4+.5, fig.height=base.height*4+.5, out.width = '100%', fig.align='center', fig.cap="(ref:SI-swe-vowels-all-cues-hz)"}
+p.matrix.cues %+%
+  (d.SwehVd.forStudy.long.static %>%
+     filter(Normalization.Type == "no normalization (Hz)", F0 < 320))
 ```
 
 ### Summary tables of GAMMs {#sec:SI-GAMMs}
