--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -9,21 +9,14 @@
   doi = {10.1121/1.1852549}
 }
 
-@article{barreda-nearey2012,
-  title = {The Direct and Indirect Roles of Fundamental Frequency in Vowel Perception},
-  author = {Barreda, Santiago and Nearey, Terrance M},
-  year = {2012},
-  month = jan,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {131},
-  number = {1},
-  pages = {466--477},
-  publisher = {{Acoustical Society of America}},
-  issn = {0001-4966},
-  doi = {10.1121/1.3662068},
-  urldate = {2023-01-27},
-  abstract = {Several experiments have found that changing the intrinsic f0 of a vowel can have an effect on perceived vowel quality. It has been suggested that these shifts may occur because f0 is involved in the specification of vowel quality in the same way as the formant frequencies. Another possibility is that f0 affects vowel quality indirectly, by changing a listener's assumptions about characteristics of a speaker who is likely to have uttered the vowel. In the experiment outlined here, participants were asked to listen to vowels differing in terms of f0 and their formant frequencies and report vowel quality and the apparent speaker's gender and size on a trial-by-trial basis. The results presented here suggest that f0 affects vowel quality mainly indirectly via its effects on the apparent-speaker characteristics; however, f0 may also have some residual direct effects on vowel quality. Furthermore, the formant frequencies were also found to have significant indirect effects on vowel quality by way of their strong influence on the apparent speaker.},
-  file = {/Users/anpe7128/Zotero/storage/TS7AJ6EJ/Barreda and Nearey - 2012 - The direct and indirect roles of fundamental frequ.pdf}
+@article{baayen2017,
+  title={The cave of shadows: Addressing the human factor with generalized additive mixed models},
+  author={Baayen, Harald and Vasishth, Shravan and Kliegl, Reinhold and Bates, Douglas},
+  journal={Journal of Memory and Language},
+  volume={94},
+  pages={206--234},
+  year={2017},
+  publisher={Elsevier}
 }
 
 @article{barreda-nearey2018,
@@ -53,16 +46,6 @@
   issn = {0954-3945},
   doi = {10.1017/S0954394521000016},
   urldate = {2023-01-11}
-}
-
-@article{baayen2017,
-  title={The cave of shadows: Addressing the human factor with generalized additive mixed models},
-  author={Baayen, Harald and Vasishth, Shravan and Kliegl, Reinhold and Bates, Douglas},
-  journal={Journal of Memory and Language},
-  volume={94},
-  pages={206--234},
-  year={2017},
-  publisher={Elsevier}
 }
 
 @article{behne-kirk1997,
@@ -104,17 +87,6 @@
   year = {2022}
 }
 
-@article{bruce1999,
-  title = {Phonetics and Phonology of the {{Swedish}} Dialects - a Project Presentation and a Database Demonstrator},
-  author = {Bruce, G{\"o}sta and Elert, Claes-Christian and Engstrand, Olle and Wretling, P{\"a}r},
-  year = {1999},
-  journal = {Proceedings of the 14th International Congress of Phonetic Sciences, University of California.},
-  pages = {321--324},
-  abstract = {A searchable database of speech samples from more than 100 Swedish dialects is being established for use in research and education. Each dialect is represented by at least 12 speakers. Recordings are made of spontaneous speech as well as words and phrases elicited with a number of specific research goals in mind. This paper summarizes one of these goals, a prosodic typology for the Swedish dialects. The current database prototype was designed as a tool in this research. Its use in accessing, representing and analyzing the relevant data is described.},
-  langid = {english},
-  file = {/Users/anpe7128/Zotero/storage/8FQPL8PD/Bruce et al. - PHONETICS AND PHONOLOGY OF THE SWEDISH DIALECTS – .pdf}
-}
-
 @incollection{bruce2009,
   title = {Components of a Prosodic Typology of {{Swedish}} Intonation},
   booktitle = {Components of a Prosodic Typology of {{Swedish}} Intonation},
@@ -130,6 +102,15 @@
   langid = {english}
 }
 
+@incollection{chuang2021,
+  title={Analyzing phonetic data with generalized additive mixed models},
+  author={Chuang, Yu-Ying and Fon, Janice and Papakyritsis, Ioannis and Baayen, Harald},
+  booktitle={Manual of clinical phonetics},
+  pages={108--138},
+  year={2021},
+  publisher={Routledge}
+}
+
 @article{cucchiarini1995,
   title = {Assessing transcription agreement: Methodological aspects},
   author = {Cucchiarini, Catia},
@@ -139,38 +120,6 @@
   number = {2},
   pages = {131--155},
   doi = {10.3109/026992096089851670269-9206}
-}
-
-@article{delattre1955,
-  title = {Acoustic {{Loci}} and {{Transitional Cues}} for {{Consonants}}},
-  author = {Delattre, Pierre C. and Liberman, Alvin M. and Cooper, Franklin S.},
-  year = {1955},
-  month = jul,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {27},
-  number = {4},
-  pages = {769--773},
-  publisher = {{Acoustical Society of America}},
-  issn = {0001-4966},
-  doi = {10.1121/1.1908024},
-  urldate = {2022-12-20},
-  file = {/Users/anpe7128/Zotero/storage/RCW4A9FU/Delattre et al. - 1955 - Acoustic Loci and Transitional Cues for Consonants.pdf}
-}
-
-@article{disner1980,
-  title = {Evaluation of Vowel Normalization Procedures},
-  author = {Disner, Sandra Ferrari},
-  year = {1980},
-  month = jan,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {67},
-  number = {1},
-  pages = {253--261},
-  issn = {0001-4966},
-  doi = {10.1121/1.383734},
-  urldate = {2022-03-16},
-  langid = {english},
-  file = {/Users/anpe7128/Zotero/storage/IXNFVUD5/Disner - 1980 - Evaluation of vowel normalization procedures.pdf}
 }
 
 @article{eklund1997,
@@ -191,7 +140,7 @@
 
 @book{elert1964,
   author={Elert, Claes-Christian},
-  title={Phonologic studies of quantity in Swedish : based on material from Stockholm speakers},
+  title={Phonologic studies of quantity in Swedish: based on material from {Stockholm} speakers},
   publisher={Almqwist {\&} Wiksell},
   address={Uppsala},
   year={1964},
@@ -208,7 +157,7 @@
 }
 
 @book{elert1981,
-  title = {Ljud Och Ord i Svenskan {[Sounds and words in Swedish language]}},
+  title ={Ljud Och Ord i Svenskan {[Sounds and words in Swedish language]}},
   author = {Elert, Claes-Christian},
   year = {1981},
   series = {Acta {{Universitatis Umensis}}},
@@ -352,18 +301,6 @@
   file = {/Users/anpe7128/Zotero/storage/SPNIBXAS/Fant - Feature analysis of Swedish vowels - a revisit.pdf}
 }
 
-@article{fant2001,
-  title = {Swedish Vowels and a New Three-Parameter Model},
-  author = {Fant, Gunnar},
-  year = {2001},
-  journal = {TMH-QPSR},
-  volume = {42},
-  number = {1},
-  pages = {043--049},
-  langid = {english},
-  file = {/Users/anpe7128/Zotero/storage/9W2M3ZNZ/Fant - Swedish vowels and a new three-parameter model.pdf}
-}
-
 @article{fujimura1967,
   title = {On the {{Second Spectral Peak}} of {{Front Vowels}}: A {{Perceptual Study}} of the {{Role}} of the {{Second}} and {{Third Formants}}},
   shorttitle = {On the {{Second Spectral Peak}} of {{Front Vowels}}},
@@ -380,15 +317,6 @@
   urldate = {2022-09-15},
   abstract = {A set of vowel stimuli with different values of mean and separation of the second and third formant frequencies were synthesized by means of series-connected resonant circuits, and formal listening tests were conducted where Swedish subjects identified each stimulus as one of three syllables consisting of a long close front vowel, /i : /, /y : /, or /u :/. The commonly accepted notion of representing the vowel quality in a two-dimensional space is criticized in view of the experimental result. Some supplemental tests of the ABX-comparison type have been conducted, and results concerning the perceptual acuity in regard to slight shifts of the formant conditions are also reported.},
   file = {/Users/anpe7128/Zotero/storage/7N35ZR6K/Fujimura - 1967 - On the Second Spectral Peak of Front Vowels a Per.pdf}
-}
-
-@inproceedings{gouvea-stern1997,
-  author={Evandro B. Gouvea and Richard M. Stern},
-  title={{Speaker normalization through formant-based warping of the frequency scale}},
-  year=1997,
-  booktitle={Proc. 5th European Conference on Speech Communication and Technology (Eurospeech 1997)},
-  pages={1139--1142},
-  doi={10.21437/Eurospeech.1997-119}
 }
 
 @article{gross2020,
@@ -476,7 +404,7 @@
 }
 
 @article{hillenbrand1995,
-  title = {Acoustic Characteristcs of American English Vowels},
+  title = {Acoustic Characteristics of American English Vowels},
   author = {Hillenbrand, James M and Getty, Laura A and Clark, Michael J and Wheeler, Kimberlee},
   year = {1995},
   journal = {Journal of the Acoustical Society of America},
@@ -520,7 +448,7 @@
 }
 
 @article{jacewicz-fox2018,
-  title = {Regional variation in fundamental frequency of American English vowels},
+  title = {Regional variation in fundamental frequency of {American} {English} vowels},
   author = {Jacewicz, Ewa and Fox, Robert Allen},
   year = {2018},
   journal = {Phonetica},
@@ -608,21 +536,10 @@
   title = {Dialekt {[Dialect]}},
   author = {Kotsinas, Ulla-Britt},
   year = {1995},
-  series = {Nationalencyklopedin},
+  publisher = {Nationalencyklopedin},
   number = {17},
   pages={267--269},
   address = {{H{\"o}gan{\"a}s}}
-}
-
-@book{krull1988,
-  title = {Acoustic Properties as Predictors of Perceptual Responses: A Study of {{Swedish}} Voiced Stops},
-  shorttitle = {Acoustic Properties as Predictors of Perceptual Responses},
-  author = {Krull, Diana},
-  year = {1988},
-  series = {Phonetic Experimental Research at the {{Institute}} of {{Linguistics}}, {{University}} of {{Stockholm}}},
-  number = {7},
-  address = {{Stockholm}},
-  isbn = {978-91-7146-493-4}
 }
 
 @book{kuronen2000,
@@ -675,7 +592,7 @@
   year = {1981},
   volume = {TaYSYLJ 7},
   pages = {163--218},
-  publisher = {{DEPARTMENT OF FINNISH LANGUAGE AND GENERAL LINGUISTICS UNIVERSITY OF TAMPERE}},
+  publisher = {{Department of Finnish language and general linguistics University of Tampere}},
   address = {{Tampere, Finland}}
 }
 
@@ -694,7 +611,7 @@
   title = {On vowel reduction},
   author = {Lindblom, Bj{\"o}rn},
   year = {1963},
-  series = {Uppsala University},
+  publisher = {Uppsala University},
   note={Lic.avh. Uppsala : Univ.},
   address = {Uppsala}
 }
@@ -707,21 +624,6 @@
   volume = {9},
   number = {2-3},
   pages = {1--5}
-}
-
-@article{malinasky2020,
-  title = {Perception of Vowels and Consonants in Cochlear Implant Users},
-  author = {Malinasky, Melissa and Shafiro, Valeriy and Moberly, Aaron C. and Vasil, Kara J.},
-  year = {2020},
-  month = oct,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {148},
-  number = {4},
-  pages = {2711--2711},
-  publisher = {{Acoustical Society of America}},
-  issn = {0001-4966},
-  doi = {10.1121/1.5147511},
-  urldate = {2022-11-21}
 }
 
 @article{martinet1952,
@@ -792,23 +694,6 @@
   file = {/Users/anpe7128/Zotero/storage/HC8I4ZAC/Nearey and Assmann - 1986 - Modeling the role of inherent spectral change in v.pdf}
 }
 
-@article{nordstrand2004,
-  title = {Measurements of Articulatory Variation in Expressive Speech for a Set of {{Swedish}} Vowels},
-  author = {Nordstrand, Magnus and Svanfeldt, Gunilla and Granstr{\"o}m, Bj{\"o}rn and House, David},
-  year = {2004},
-  month = oct,
-  journal = {Speech Communication},
-  volume = {44},
-  number = {1-4},
-  pages = {187--196},
-  issn = {01676393},
-  doi = {10.1016/j.specom.2004.09.003},
-  urldate = {2020-02-12},
-  abstract = {Facial gestures are used to convey e.g. emotions, dialogue states and conversational signals, which support us in the interpretation of other people\~Os feelings and intentions. Synthesising this behaviour with an animated talking head would widen the possibilities of this intuitive interface. The dynamic characteristics of these facial gestures during speech affect articulation. Previously, articulation for neutral speech has been studied and implemented in animation rules. The results obtained in this study show how some articulatory parameters are affected by the influence of expressiveness in speech for a selection of Swedish vowels. Our focus has primarily been on attitudes and emotions conveying information that is intended to make an animated agent more ``human-like''. A multimodal corpus of acted expressive speech has been collected for this purpose.},
-  langid = {english},
-  file = {/Users/anpe7128/Zotero/storage/AKYGTHJX/Nordstrand et al. - 2004 - Measurements of articulatory variation in expressi.pdf}
-}
-
 @inproceedings{pelzer-boersma2019,
   title = {{{Diphthongization in three regional varieties of Swedish}}},
   booktitle = {Proceedings of the 19th {{International Congress}} of {{Phonetic Sciences}}},
@@ -868,17 +753,6 @@
   file = {/Users/anpe7128/Zotero/storage/LP5L4BJH/Peterson - 1961 - Parameters of Vowel Quality.pdf}
 }
 
-@article{pycha2016,
-  author = {Pycha, Anne},
-  title ={Co-articulatory Cues for Communication: An Investigation of Five Environments},
-  journal = {Language and Speech},
-  volume = {59},
-  number = {3},
-  pages = {364-386},
-  year = {2016},
-  doi = {10.1177/0023830915603878}
-}
-
 @article{renwick-stanley2020,
   title = {Modeling dynamic trajectories of front vowels in the American South},
   author = {Renwick, Margaret E L and Stanley, Joseph A},
@@ -905,7 +779,7 @@
 }
 
 @book{schaeffler2005,
-  title = {Phonological Quantity in Swedish Dialects: Typological Aspects, Phonetic Variation and Diachronic Change},
+  title = {Phonological Quantity in {{Swedish}} Dialects: Typological Aspects, Phonetic Variation and Diachronic Change},
   shorttitle = {Phonological Quantity in Swedish Dialects},
   author = {Schaeffler, Felix},
   year = {2005},
@@ -916,6 +790,17 @@
   isbn = {978-91-7305-935-0},
   langid = {english},
   file = {/Users/anpe7128/Zotero/storage/IXV25BU4/Schaeffler - 2005 - Phonological quantity in swedish dialects typolog.pdf}
+}
+
+@article{schertz2013,
+  title={Exaggeration of featural contrasts in clarifications of misheard speech in English},
+  author={Schertz, Jessamyn},
+  journal={Journal of Phonetics},
+  volume={41},
+  number={3-4},
+  pages={249--263},
+  year={2013},
+  publisher={Elsevier}
 }
 
 @article{schertz-clare2019,
@@ -942,6 +827,17 @@
   isbn = {9789624423419}
 }
 
+@article{seyfarth2016,
+  title={Dynamic hyperarticulation of coda voicing contrasts},
+  author={Seyfarth, Scott and Buz, Esteban and Jaeger, T Florian},
+  journal={The Journal of the Acoustical Society of America},
+  volume={139},
+  number={2},
+  pages={EL31--EL37},
+  year={2016},
+  publisher={AIP Publishing}
+}
+
 @article{soskuthy2018,
 author = {Sóskuthy, Márton and Foulkes, Paul and Hughes, Vincent and Haddican, Bill},
 title = {Changing Words and Sounds: The Roles of Different Cognitive Units in Sound Change},
@@ -957,17 +853,6 @@ abstract = {Abstract This study considers the role of different cognitive units 
 year = {2018}
 }
 
-@article{seyfarth2016,
-  title={Dynamic hyperarticulation of coda voicing contrasts},
-  author={Seyfarth, Scott and Buz, Esteban and Jaeger, T Florian},
-  journal={The Journal of the Acoustical Society of America},
-  volume={139},
-  number={2},
-  pages={EL31--EL37},
-  year={2016},
-  publisher={AIP Publishing}
-}
-
 @article{soskuthy2021,
   title = {Evaluating generalised additive mixed modelling strategies for dynamic speech analysis},
   author = {Sóskuthy, Márton},
@@ -979,7 +864,7 @@ year = {2018}
 }
 
 @article{stahle1965,
-  title = {'{{M\"otet}} Uppnas P\aa{} Sundag'},
+  title = {'{{M\"otet}} Uppnas P\aa{} Sundag'{[The meeting uppnas on sundag]}},
   author = {St{\aa}hle, Carl Ivar},
   year = {1965},
   journal = {Spr\aa kv\aa rd},
@@ -988,12 +873,14 @@ year = {2018}
   pages = {1--15}
 }
 
-@book{stevens1998,
-  title = {Acoustic Phonetics},
-  author = {Stevens, Kenneth N},
-  year = {1998},
-  publisher = {{MIT Press}},
-  city = {Cambridge, MA}
+@article{stalhammar1973,
+  title = {Contextual effects on vowel nuclei},
+  author = {St{\aa}lhammar, U. and Karlsson, I. and Fant, G.},
+  year = {1973},
+  journal = {STL-QPSR},
+  volume = {14},
+  number = {4},
+  pages = {001--018}
 }
 
 @article{stevens-house1963,
@@ -1059,34 +946,6 @@ year = {2018}
   year={2001}
 }
 
-@article{stalhammar1973,
-  title = {Contextual effects on vowel nuclei},
-  author = {St{\aa}lhammar, U. and Karlsson, I. and Fant, G.},
-  year = {1973},
-  journal = {STL-QPSR},
-  volume = {14},
-  number = {4},
-  pages = {001--018}
-}
-
-@article{sussman1997,
-  title = {An Investigation of Stop Place of Articulation as a Function of Syllable Position: A Locus Equation Perspective},
-  shorttitle = {An Investigation of Stop Place of Articulation as a Function of Syllable Position},
-  author = {Sussman, Harvey M. and Bessell, Nicola and Dalston, Eileen and Majors, Tivoli},
-  year = {1997},
-  month = may,
-  journal = {The Journal of the Acoustical Society of America},
-  volume = {101},
-  number = {5 Pt 1},
-  pages = {2826--2838},
-  issn = {0001-4966},
-  doi = {10.1121/1.418567},
-  abstract = {Locus equations were employed to phonetically describe stop place categories as a function of syllable-initial, -medial, and -final position. Ten speakers, five male and five female, produced a total of 2700 CVC and 4500 VCV utterances that were acoustically analyzed to obtain F2 onset, F2 vowel, and F2 offset frequencies for locus equation regression analyses. In general, degree of coarticulation, as indexed by locus equation slope, was reduced for post-vocalic (VC) stops relative to pre-vocalic stops (pooled data from initial and medial positions), but significant differences were observed as a function of stop consonant. All stops showed significantly reduced R2 values and increased standard errors of estimate for VC relative to CV productions. Separability of stop place categories in a higher-order slope X y-intercept acoustic space also diminished for VC vs CV stop productions. The degradation of classic locus equation form (high correlation and linearity) for VC relative to CV productions was attributed to greater articulatory precision in the production of pre-vocalic compared to post-vocalic stops. This greater articulatory precision was interpreted as reflecting a greater need to normalize vowel context-induced variability of the F2 transition for syllable onset relative to final stops. The decline in acoustic lawfulness of syllable-final stops is discussed in terms of coarticulatory interactions and expected perceptual correlates.},
-  langid = {english},
-  pmid = {9165737},
-  keywords = {Female,Humans,Male,Phonetics,Sound Spectrography,Speech,Speech Production Measurement,{Speech, Alaryngeal}}
-}
-
 @article{syrdal1985,
   title = {Aspects of a Model of the Auditory Representation of American English Vowels},
   author = {Syrdal, Ann K},
@@ -1120,16 +979,6 @@ year = {2018}
     eprint = {https://pubs.aip.org/asa/jasa/article-pdf/106/1/458/8086358/458\_1\_online.pdf},
 }
 
-@article{wieling2018,
-  title={Analyzing dynamic phonetic data using generalized additive mixed modeling: A tutorial focusing on articulatory differences between L1 and L2 speakers of English},
-  author={Wieling, Martijn},
-  journal={Journal of Phonetics},
-  volume={70},
-  pages={86--116},
-  year={2018},
-  publisher={Elsevier}
-}
-
 @article{wedel2018,
   title={The phonetic specificity of contrastive hyperarticulation in natural speech},
   author={Wedel, Andrew and Nelson, Noah and Sharp, Rebecca},
@@ -1141,7 +990,7 @@ year = {2018}
 }
 
 @inproceedings{weirich2019,
-  title={The phonetics of gender in Swedish and German},
+  title={The phonetics of gender in {Swedish} and {German}},
   author={Weirich, Melanie and Simpson, Adrian P and {\"O}jbro, Jasmine and Ericsdotter Nordgren, Christine},
   booktitle={Fonetik 2019, Stockholm, Sweden, 10-12 June, 2019},
   pages={49--53},
@@ -1157,17 +1006,14 @@ year = {2018}
   series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet 80}
 }
 
-@article{xie2023,
-  title = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception: {{A}} Computational Review},
-  shorttitle = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception},
-  author = {Xie, Xin and Jaeger, T Florian and Kurumada, Chigusa},
-  year = {2023},
-  journal = {Cortex},
-  pages = {377-424},
-  publisher = {{Open Science Framework}},
-  urldate = {2023-05-17},
-  abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
-  collaborator = {Open Science Framework}
+@article{wieling2018,
+  title={Analyzing dynamic phonetic data using generalized additive mixed modeling: A tutorial focusing on articulatory differences between L1 and L2 speakers of English},
+  author={Wieling, Martijn},
+  journal={Journal of Phonetics},
+  volume={70},
+  pages={86--116},
+  year={2018},
+  publisher={Elsevier}
 }
 
 @article{xie-jaeger2020,
@@ -1181,6 +1027,19 @@ year = {2018}
   pages = {3322--3347},
   issn = {0001-4966},
   doi = {10.1121/10.0001141}
+}
+
+@article{xie2023,
+  title = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception: {{A}} Computational Review},
+  shorttitle = {What We Do (Not) Know about the Mechanisms Underlying Adaptive Speech Perception},
+  author = {Xie, Xin and Jaeger, T Florian and Kurumada, Chigusa},
+  year = {2023},
+  journal = {Cortex},
+  pages = {377-424},
+  publisher = {{Open Science Framework}},
+  urldate = {2023-05-17},
+  abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
+  collaborator = {Open Science Framework}
 }
 
 @article{young2021,
